Create activity for book detail by id

--- a/app/src/main/res/layout/fragment_add_book_offline_input.xml
+++ b/app/src/main/res/layout/fragment_add_book_offline_input.xml
@@ -65,7 +65,7 @@
 
         <com.google.android.material.textfield.TextInputLayout
             android:id="@+id/et_book_author"
-            style="@style/Theme.MyApplication.SplashScreenTheme.Blue.TextInputLayout.FilledBlack.NoUnderline"
+            style="@style/Theme.MyApplication.SplashScreenTheme.Blue.TextInputLayout.FilledBlack.PurpleUnderline"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_marginHorizontal="50dp"
