--- a/app/src/main/res/layout/activity_book_info.xml
+++ b/app/src/main/res/layout/activity_book_info.xml
@@ -10,14 +10,16 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:theme="@style/Theme.MyApplication.AppBarOverlay"
-        app:elevation="0dp">
+        app:elevation="1dp">
 
         <androidx.appcompat.widget.Toolbar
             android:id="@+id/toolbar"
             android:layout_width="match_parent"
             android:layout_height="?attr/actionBarSize"
             android:background="@color/splash_screen_dark_purple"
-            app:popupTheme="@style/purpleTopBarWithNoOverlay" />
+            app:popupTheme="@style/purpleTopBarWithNoOverlay"
+            app:title="@string/label_book_details"
+            />
 
     </com.google.android.material.appbar.AppBarLayout>
 
@@ -28,6 +30,7 @@
         <androidx.constraintlayout.widget.ConstraintLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:layout_marginTop="40dp"
             android:background="@color/splash_screen_dark_purple">
 
             <com.google.android.material.progressindicator.LinearProgressIndicator
@@ -46,9 +49,11 @@
                 android:id="@+id/iv_book_preview"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_margin="12dp"
+                android:layout_marginHorizontal="12dp"
+                android:layout_marginTop="30dp"
                 android:contentDescription="@string/label_book_image"
-                android:minWidth="120dp"
+                android:minWidth="150dp"
+                android:maxWidth="160dp"
                 android:minHeight="150dp"
                 android:src="@drawable/ic_item_book"
                 app:layout_constraintEnd_toStartOf="@id/tv_book_title"
@@ -59,7 +64,6 @@
                 android:id="@+id/tv_book_title"
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
-                android:layout_marginTop="30dp"
                 android:textAlignment="textStart"
                 android:textColor="@color/white"
                 android:textSize="24sp"
@@ -103,11 +107,21 @@
                 app:layout_constraintStart_toStartOf="@id/iv_book_preview"
                 app:layout_constraintTop_toBottomOf="@id/iv_book_preview" />
 
+            <Spinner
+                android:id="@+id/spinner_reading_status"
+                android:layout_width="150dp"
+                android:layout_height="wrap_content"
+                app:layout_constraintBottom_toBottomOf="@id/btn_edit_book"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintStart_toEndOf="@id/btn_edit_book"
+                app:layout_constraintTop_toTopOf="@id/btn_edit_book"
+                tools:listitem="@android:layout/simple_spinner_dropdown_item" />
+
             <com.google.android.material.divider.MaterialDivider
                 android:id="@+id/divider_purple_to_white"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_marginTop="40dp"
+                android:layout_marginTop="56dp"
                 app:layout_constraintTop_toBottomOf="@id/btn_edit_book" />
 
 
@@ -115,13 +129,50 @@
                 android:id="@+id/cl_additional_info"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
-                android:layout_marginTop="16dp"
                 android:minHeight="500sp"
                 android:background="@drawable/bg_add_book_offline"
-                android:paddingTop="16dp"
+                android:padding="16dp"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintTop_toBottomOf="@id/divider_purple_to_white">
 
+                <TextView
+                    android:id="@+id/tv_label_description"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    app:layout_constraintTop_toTopOf="parent"
+                    app:layout_constraintStart_toStartOf="parent"
+                    android:text="Description"
+                    android:textStyle="bold"
+                    android:textSize="20sp"
+                    android:textColor="@color/black"
+                    />
+
+                <TextView
+                    android:id="@+id/tv_description"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginHorizontal="16dp"
+                    android:textColor="@color/gray_transparent_80"
+                    android:lineHeight="20sp"
+                    app:layout_constraintStart_toStartOf="parent"
+                    app:layout_constraintTop_toBottomOf="@id/tv_label_description"
+                    tools:text="Lorem impsum fnausof fsnaofsa fnasofna fnsaionfsa faisnfosa fnaifnaofnsa fpamfpsa"
+                    />
+
+                <TextView
+                    android:id="@+id/tv_description_show_more"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:clickable="true"
+                    app:layout_constraintEnd_toEndOf="parent"
+                    app:layout_constraintTop_toBottomOf="@id/tv_description"
+                    android:layout_marginHorizontal="16dp"
+                    android:gravity="end"
+                    android:text="@string/label_show_more"
+                    android:textColor="@color/gd_blue_purple_0"
+                    android:textStyle="bold"
+                    android:textSize="16sp"
+                    android:focusable="true" />
 
             </androidx.constraintlayout.widget.ConstraintLayout>
 
