--- a/app/src/main/res/drawable/ic_item_book.xml
+++ b/app/src/main/res/drawable/ic_item_book.xml
@@ -1,21 +1,28 @@
-<vector xmlns:android="http://schemas.android.com/apk/res/android" xmlns:aapt="http://schemas.android.com/aapt"
-    android:viewportWidth="455"
-    android:viewportHeight="455"
+<vector xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:aapt="http://schemas.android.com/aapt"
     android:width="80dp"
-    android:height="80dp">
-    <path
-        android:pathData="M55 0C38.5 0 25 13.5 25 30v395c0 16.5 13.5 30 30 30h70l10 -227.5L125 0H55z"
-        android:fillColor="#0056B1" />
-    <path
-        android:pathData="M340 0L290 227.5 340 455 430 455 430 0Z"
-        android:fillColor="#0056B1" />
-    <path
-        android:pathData="M370 30L350 227.5 370 425 400 425 400 30Z"
-        android:fillColor="#C1E8E6" />
-    <path
-        android:pathData="M320 30H370V425H320V30Z"
-        android:fillColor="#FFFFFF" />
-    <path
-        android:pathData="M125 0H340V455H125V0Z"
-        android:fillColor="#1EB9FF" />
+    android:height="80dp"
+    android:viewportWidth="455"
+    android:viewportHeight="455">
+    <group
+        android:pivotX="227.5"
+        android:pivotY="227.5"
+        android:scaleX="0.8"
+        android:scaleY="0.8">
+        <path
+            android:fillColor="#0056B1"
+            android:pathData="M55 0C38.5 0 25 13.5 25 30v395c0 16.5 13.5 30 30 30h70l10 -227.5L125 0H55z" />
+        <path
+            android:fillColor="#0056B1"
+            android:pathData="M340 0L290 227.5 340 455 430 455 430 0Z" />
+        <path
+            android:fillColor="#C1E8E6"
+            android:pathData="M370 30L350 227.5 370 425 400 425 400 30Z" />
+        <path
+            android:fillColor="#FFFFFF"
+            android:pathData="M320 30H370V425H320V30Z" />
+        <path
+            android:fillColor="#1EB9FF"
+            android:pathData="M125 0H340V455H125V0Z" />
+    </group>
 </vector>
