--- a/app/src/main/res/layout/item_book.xml
+++ b/app/src/main/res/layout/item_book.xml
@@ -14,8 +14,9 @@
 
     <ImageView
         android:id="@+id/iv_book_default"
-        android:layout_width="wrap_content"
+        android:layout_width="150dp"
         android:layout_height="wrap_content"
+        android:minHeight="160dp"
         android:padding="4dp"
         android:src="@drawable/ic_item_book"
 
