--- a/app/src/main/res/layout/activity_book_info.xml
+++ b/app/src/main/res/layout/activity_book_info.xml
@@ -18,8 +18,7 @@
             android:layout_height="?attr/actionBarSize"
             android:background="@color/splash_screen_dark_purple"
             app:popupTheme="@style/purpleTopBarWithNoOverlay"
-            app:title="@string/label_book_details"
-            />
+            app:title="@string/label_book_details" />
 
     </com.google.android.material.appbar.AppBarLayout>
 
@@ -63,24 +62,23 @@
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
                 android:layout_marginHorizontal="12dp"
+                android:text="@string/label_loading_three_dots"
                 android:textAlignment="textStart"
                 android:textColor="@color/white"
-                android:text="@string/label_loading_three_dots"
                 android:textSize="24sp"
                 android:textStyle="bold"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toEndOf="@id/iv_book_preview"
-                app:layout_constraintTop_toTopOf="@id/iv_book_preview"
-                />
+                app:layout_constraintTop_toTopOf="@id/iv_book_preview" />
 
             <com.google.android.material.textfield.TextInputLayout
                 android:id="@+id/et_book_author"
                 style="@style/Theme.MyApplication.SplashScreenTheme.Blue.TextInputLayout.FilledBlack.NoUnderline"
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
+                android:background="@color/splash_screen_dark_purple"
                 android:hint="@string/label_author"
                 app:boxBackgroundColor="@color/splash_screen_dark_purple"
-                android:background="@color/splash_screen_dark_purple"
                 app:boxStrokeColor="@color/til_purple_stroke_color_no_underline"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toEndOf="@id/iv_book_preview"
@@ -89,11 +87,10 @@
                 <com.google.android.material.textfield.TextInputEditText
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:gravity="start"
                     android:enabled="false"
+                    android:gravity="start"
                     android:text="@string/label_loading_three_dots"
-                    android:textColor="@color/gd_blue_purple_3"
-                    />
+                    android:textColor="@color/gd_blue_purple_3" />
             </com.google.android.material.textfield.TextInputLayout>
 
 
@@ -130,54 +127,224 @@
                 android:id="@+id/cl_additional_info"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
-                android:minHeight="500sp"
                 android:background="@drawable/bg_add_book_offline"
+                android:minHeight="500sp"
                 android:padding="16dp"
                 app:layout_constraintBottom_toBottomOf="parent"
-                app:layout_constraintTop_toBottomOf="@id/divider_purple_to_white">
+                app:layout_constraintTop_toBottomOf="@id/divider_purple_to_white"
+                app:layout_constraintVertical_bias="1.0"
+                tools:layout_editor_absoluteX="0dp">
 
                 <TextView
                     android:id="@+id/tv_label_description"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    app:layout_constraintTop_toTopOf="parent"
-                    app:layout_constraintStart_toStartOf="parent"
                     android:text="@string/label_Description"
-                    android:textStyle="bold"
-                    android:textSize="20sp"
                     android:textColor="@color/black"
-                    />
+                    android:textSize="20sp"
+                    android:textStyle="bold"
+                    app:layout_constraintStart_toStartOf="parent"
+                    app:layout_constraintTop_toTopOf="parent" />
 
                 <TextView
                     android:id="@+id/tv_description"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_marginHorizontal="16dp"
-                    android:textColor="@color/gray_transparent_80"
                     android:lineHeight="20sp"
                     android:text="@string/label_loading_three_dots"
+                    android:textColor="@color/gray_transparent_80"
                     app:layout_constraintStart_toStartOf="parent"
                     app:layout_constraintTop_toBottomOf="@id/tv_label_description"
-                    tools:text="Lorem impsum fnausof fsnaofsa fnasofna fnsaionfsa faisnfosa fnaifnaofnsa fpamfpsa"
-                    />
+                    tools:text="Lorem impsum fnausof fsnaofsa fnasofna fnsaionfsa faisnfosa fnaifnaofnsa fpamfpsa" />
 
                 <TextView
                     android:id="@+id/tv_description_show_more"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:clickable="true"
-                    app:layout_constraintEnd_toEndOf="parent"
-                    app:layout_constraintTop_toBottomOf="@id/tv_description"
                     android:layout_marginHorizontal="16dp"
+                    android:clickable="true"
+                    android:focusable="true"
                     android:gravity="end"
                     android:text="@string/label_show_more"
                     android:textColor="@color/gd_blue_purple_0"
-                    android:textStyle="bold"
                     android:textSize="16sp"
-                    android:focusable="true" />
+                    android:textStyle="bold"
+                    app:layout_constraintEnd_toEndOf="parent"
+                    app:layout_constraintTop_toBottomOf="@id/tv_description" />
+
+                <TextView
+                    android:id="@+id/tv_label_annotations"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="@string/label_annotations"
+                    android:textColor="@color/black"
+                    android:textSize="20sp"
+                    android:textStyle="bold"
+                    app:layout_constraintStart_toStartOf="parent"
+                    app:layout_constraintTop_toBottomOf="@id/tv_description_show_more" />
+
+                <ImageView
+                    android:id="@+id/iv_ic_annotation_1"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginStart="32dp"
+                    android:src="@drawable/ic_annotation_yellow"
+                    app:layout_constraintStart_toStartOf="parent"
+                    app:layout_constraintTop_toBottomOf="@id/tv_label_annotations" />
+
+                <ImageView
+                    android:id="@+id/iv_ic_annotation_2"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginStart="16dp"
+                    android:src="@drawable/ic_annotation_yellow"
+                    app:layout_constraintStart_toEndOf="@id/iv_ic_annotation_1"
+                    app:layout_constraintTop_toTopOf="@id/iv_ic_annotation_1" />
+
+                <ImageView
+                    android:id="@+id/iv_ic_annotation_3"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginStart="16dp"
+                    android:src="@drawable/ic_annotation_yellow"
+                    app:layout_constraintStart_toEndOf="@id/iv_ic_annotation_2"
+                    app:layout_constraintTop_toTopOf="@id/iv_ic_annotation_2" />
+
+                <ImageView
+                    android:id="@+id/iv_ic_annotation_4"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginStart="16dp"
+                    android:src="@drawable/ic_annotation_yellow"
+                    app:layout_constraintStart_toEndOf="@id/iv_ic_annotation_3"
+                    app:layout_constraintTop_toTopOf="@id/iv_ic_annotation_3" />
+
+
+                <TextView
+                    android:id="@+id/tv_annotation_show_more"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginHorizontal="16dp"
+                    android:clickable="true"
+                    android:focusable="true"
+                    android:gravity="end"
+                    android:text="@string/label_show_more"
+                    android:textColor="@color/gd_blue_purple_0"
+                    android:textSize="16sp"
+                    android:textStyle="bold"
+                    app:layout_constraintEnd_toEndOf="parent"
+                    app:layout_constraintTop_toBottomOf="@id/iv_ic_annotation_4" />
+
+                <TextView
+                    android:id="@+id/tv_label_abstracts"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="@string/label_abstracts"
+                    android:textColor="@color/black"
+                    android:textSize="20sp"
+                    android:textStyle="bold"
+                    app:layout_constraintStart_toStartOf="parent"
+                    app:layout_constraintTop_toBottomOf="@id/tv_annotation_show_more" />
+
+                <ImageView
+                    android:id="@+id/iv_ic_abstract_1"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginStart="32dp"
+                    android:src="@drawable/ic_abstract"
+                    app:layout_constraintStart_toStartOf="parent"
+                    app:layout_constraintTop_toBottomOf="@id/tv_label_abstracts" />
+
+                <ImageView
+                    android:id="@+id/iv_ic_abstract_2"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginStart="16dp"
+                    android:src="@drawable/ic_abstract"
+                    app:layout_constraintStart_toEndOf="@id/iv_ic_abstract_1"
+                    app:layout_constraintTop_toTopOf="@id/iv_ic_abstract_1" />
+
+                <ImageView
+                    android:id="@+id/iv_ic_abstract_3"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginStart="16dp"
+                    android:src="@drawable/ic_abstract"
+                    app:layout_constraintStart_toEndOf="@id/iv_ic_abstract_2"
+                    app:layout_constraintTop_toTopOf="@id/iv_ic_abstract_2" />
+
+                <ImageView
+                    android:id="@+id/iv_ic_abstract_4"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginStart="16dp"
+                    android:src="@drawable/ic_abstract"
+                    app:layout_constraintStart_toEndOf="@id/iv_ic_abstract_3"
+                    app:layout_constraintTop_toTopOf="@id/iv_ic_abstract_3" />
+
+                <TextView
+                    android:id="@+id/tv_abstract_show_more"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginHorizontal="16dp"
+                    android:clickable="true"
+                    android:focusable="true"
+                    android:gravity="end"
+                    android:text="@string/label_show_more"
+                    android:textColor="@color/gd_blue_purple_0"
+                    android:textSize="16sp"
+                    android:textStyle="bold"
+                    app:layout_constraintEnd_toEndOf="parent"
+                    app:layout_constraintTop_toBottomOf="@id/iv_ic_abstract_4" />
+
 
             </androidx.constraintlayout.widget.ConstraintLayout>
 
+
         </androidx.constraintlayout.widget.ConstraintLayout>
     </ScrollView>
+
+    <com.google.android.material.floatingactionbutton.FloatingActionButton
+        android:id="@+id/fab_show_add_options"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_gravity="bottom|end"
+        android:layout_margin="16dp"
+        android:backgroundTint="@color/gd_blue_purple_0"
+        android:contentDescription="@string/label_add_annotation_or_abstract"
+        app:srcCompat="@drawable/ic_add"
+        app:tint="@color/white" />
+
+    <com.google.android.material.floatingactionbutton.FloatingActionButton
+        android:id="@+id/fab_add_abstract"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_gravity="bottom|end"
+        android:layout_marginEnd="24dp"
+        android:layout_marginBottom="80dp"
+        android:backgroundTint="@color/dark_gray_1"
+        android:contentDescription="@string/label_add_annotation_or_abstract"
+        android:visibility="gone"
+        app:borderWidth="0dp"
+        app:fabSize="mini"
+        app:srcCompat="@drawable/ic_abstract_transparent_color_white"
+        app:tint="@color/white"
+        tools:visibility="visible" />
+
+    <com.google.android.material.floatingactionbutton.FloatingActionButton
+        android:id="@+id/fab_add_annotation"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_gravity="bottom|end"
+        android:layout_marginEnd="24dp"
+        android:layout_marginBottom="135dp"
+        android:backgroundTint="@color/yellow_gray_1"
+        android:contentDescription="@string/label_add_annotation_or_abstract"
+        android:visibility="gone"
+        app:borderWidth="0dp"
+        app:fabSize="mini"
+        app:srcCompat="@drawable/ic_annotation_yellow"
+        app:tint="@color/white"
+        tools:visibility="visible" />
 </androidx.coordinatorlayout.widget.CoordinatorLayout>
