--- a/app/src/main/res/layout/spinner_item.xml
+++ b/app/src/main/res/layout/spinner_item.xml
@@ -7,4 +7,5 @@
     android:textSize="16sp"
     android:textColor="@color/white"
     android:padding="5dip"
+    tools:text="@string/label_author"
     />
