Add event to edit and update an annotation. Fix dark colors

--- a/app/src/main/res/layout/activity_add_annotation.xml
+++ b/app/src/main/res/layout/activity_add_annotation.xml
@@ -7,10 +7,24 @@
     android:layout_height="match_parent"
     android:background="#FAE8CD">
 
+    <com.google.android.material.progressindicator.LinearProgressIndicator
+        android:id="@+id/progress_sending"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:indeterminate="true"
+        android:visibility="gone"
+        app:indicatorColor="?attr/colorPrimary"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:trackColor="?attr/colorPrimary" />
 
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent">
+
+
+
 
         <ScrollView
             android:layout_width="match_parent"
