Fix search break line

--- a/app/src/main/res/layout/fragment_add_book_options.xml
+++ b/app/src/main/res/layout/fragment_add_book_options.xml
@@ -45,6 +45,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:gravity="left"
+                android:inputType="text"
                 android:textColor="@color/white" />
         </com.google.android.material.textfield.TextInputLayout>
 
