Fix annotation content on rotate device

--- a/app/src/main/res/layout/activity_add_annotation.xml
+++ b/app/src/main/res/layout/activity_add_annotation.xml
@@ -17,7 +17,7 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:trackColor="?attr/colorPrimary" />
+        app:trackColor="?attr/colorSecondaryVariant" />
 
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
