--- a/app/src/main/res/layout/fragment_add_book_offline_input.xml
+++ b/app/src/main/res/layout/fragment_add_book_offline_input.xml
@@ -157,9 +157,10 @@
                 style="@style/Theme.MyApplication.TextInputLayout.FilledBlack.NoUnderline"
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
-                android:layout_marginHorizontal="16dp"
+                android:layout_marginHorizontal="32dp"
                 android:layout_marginVertical="16dp"
                 android:hint="@string/label_description"
+
                 android:background="@color/white"
                 app:boxBackgroundColor="@color/white"
                 app:layout_constraintEnd_toEndOf="parent"
@@ -169,7 +170,9 @@
                 <com.google.android.material.textfield.TextInputEditText
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:gravity="center|top"
+                    android:lineSpacingExtra="8sp"
+                    android:gravity="fill_horizontal"
+                    android:justificationMode="inter_word"
                     android:minLines="6"
                     android:padding="40dp"
                     android:textColor="@color/gray_transparent_80" />
