--- a/app/src/main/res/layout/activity_add_annotation.xml
+++ b/app/src/main/res/layout/activity_add_annotation.xml
@@ -218,7 +218,7 @@
         android:layout_height="wrap_content"
         android:layout_marginEnd="8dp"
         android:layout_marginBottom="60dp"
-        android:backgroundTint="?attr/colorPrimary"
+        app:backgroundTint="?attr/colorPrimary"
         android:contentDescription="@string/label_save_annotation"
         android:elevation="8dp"
         android:src="@drawable/ic_save"
