change highlight color and apply black color on dark mode

--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -52,5 +52,5 @@
     <color name="yellow_gray_1">#E2DDCB</color>
 
     <color name="m_editor_wheat">#FAE8CD</color>
-    <color name="m_editor_black">@color/yellow_gray_1</color>
+    <color name="m_editor_black">@color/black</color>
 </resources>
